[tool.poetry]
name = "distribution-steering-mdp"
version = "0.1.0"
description = ""
authors = ["Alexandros Tzikas <33734693+alextzik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
